--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Segmented Concentric Circles</title>
     <button id="saveButton">Save as SVG</button>
-    <link rel="stylesheet" href="TBLP 20240910.CSS" />
+    <link rel="stylesheet" href="TBLP 20240910.css" />
     <style>
         /* 添加提示元素的樣式 */
         .tooltip {
